change hero area

--- a/animals.html
+++ b/animals.html
@@ -44,141 +44,144 @@
   </nav>
   </div>
 
-<div class="container">
-<h2 class="h2-available">AVAILABLE ANIMALS (48)</h2>
-</div>
+  <div class="container">
+    <h2 class="h2-available">AVAILABLE ANIMALS (48)</h2>
+  </div>
 
- <!--Filter-->
- <div class="container search">
- <nav class="navbar navbar-light center">
-    <div class="input-group">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-        aria-haspopup="true" aria-expanded="false">Filter</a>
-      <!--Size-->
-      <div class="dropdown-menu" aria-labelledby="navbarDropdown">Size
-        <a class="dropdown-item" href="#">
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <div class="input-group-text">
-                <input type="checkbox" aria-label="Checkbox for following text input">Small
-              </div>
-            </div>
-            <input type="text" class="form-control" aria-label="Text input with checkbox">
-          </div>
-        </a>
+  <!--Filter-->
+  <div class="container search">
+    <!--Filter-->
+    <nav class="navbar navbar-light center">
+      <div class="input-group">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">Filter</a>
 
-        <a class="dropdown-item" href="#">
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <div class="input-group-text">
-                <input type="checkbox" aria-label="Checkbox for following text input">Medium
-              </div>
-            </div>
-            <input type="text" class="form-control" aria-label="Text input with checkbox">
-          </div>
-        </a>
+        <!--Options-->
 
-        <a class="dropdown-item" href="#">
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <div class="input-group-text">
-                <input type="checkbox" aria-label="Checkbox for following text input">Large
-              </div>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <div class="dropdown-menu-flex">
+            <!--Size-->
+
+           <div>
+              <a class="dropdown-item" href="#">Size
+                <div class="input-group ">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">
+                      <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;Small
+                    </div>
+                  </div>
+                </div>
+              </a>
+
+              <a class="dropdown-item" href="#">
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">
+                      <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;Medium
+                    </div>
+                  </div>
+                </div>
+              </a>
+
+              <a class="dropdown-item" href="#">
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">
+                      <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;Large
+                    </div>
+                  </div>
+                </div>
+              </a>
+           
+           </div>
+
+
+            <!--Age-->
+         <div>
+              <a class="dropdown-item" href="#">Age
+                <div class="input-group ">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">
+                      <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;0-2Y
+                    </div>
+                  </div>
+                </div>
+              </a>
+
+              <a class="dropdown-item" href="#">
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">
+                      <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;2-6Y
+                    </div>
+                  </div>
+                </div>
+              </a>
+
+              <a class="dropdown-item" href="#">
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">
+                      <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;6 - Older
+                    </div>
+                  </div>
+                </div>
+              </a>
             </div>
-            <input type="text" class="form-control" aria-label="Text input with checkbox">
+
+            <!--Temperment-->
+         <div>
+              <a class="dropdown-item" href="#">Size
+                <div class="input-group ">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">
+                      <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;Calm
+                    </div>
+                  </div>
+                </div>
+              </a>
+
+              <a class="dropdown-item" href="#">
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">
+                      <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;Energetic
+                    </div>
+                  </div>
+                </div>
+              </a>
+
+              <a class="dropdown-item" href="#">
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">
+                      <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;Sensitive
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+           
+
           </div>
-        </a>
+        </div>
       </div>
-    </div>
-    <!--Age-->
-    <div class="dropdown-menu" aria-labelledby="navbarDropdown">Age
-      <a class="dropdown-item" href="#">
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <div class="input-group-text">
-              <input type="checkbox" aria-label="Checkbox for following text input">0-2Y
-            </div>
-          </div>
-          <input type="text" class="form-control" aria-label="Text input with checkbox">
-        </div>
-      </a>
+    </nav>
 
-      <a class="dropdown-item" href="#">
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <div class="input-group-text">
-              <input type="checkbox" aria-label="Checkbox for following text input">2-6Y
-            </div>
-          </div>
-          <input type="text" class="form-control" aria-label="Text input with checkbox">
-        </div>
-      </a>
-
-      <a class="dropdown-item" href="#">
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <div class="input-group-text">
-              <input type="checkbox" aria-label="Checkbox for following text input">6 Over
-            </div>
-          </div>
-          <input type="text" class="form-control" aria-label="Text input with checkbox">
-        </div>
-      </a>
-    </div>
-</div>
-
-<!--Temperament-->
-<div class="dropdown-menu" aria-labelledby="navbarDropdown">Temperament
-  <a class="dropdown-item" href="#">
-    <div class="input-group mb-3">
-      <div class="input-group-prepend">
-        <div class="input-group-text">
-          <input type="checkbox" aria-label="Checkbox for following text input">Calm
-        </div>
-      </div>
-      <input type="text" class="form-control" aria-label="Text input with checkbox">
-    </div>
-  </a>
-
-  <a class="dropdown-item" href="#">
-    <div class="input-group mb-3">
-      <div class="input-group-prepend">
-        <div class="input-group-text">
-          <input type="checkbox" aria-label="Checkbox for following text input">Energetic
-        </div>
-      </div>
-      <input type="text" class="form-control" aria-label="Text input with checkbox">
-    </div>
-  </a>
-
-  <a class="dropdown-item" href="#">
-    <div class="input-group mb-3">
-      <div class="input-group-prepend">
-        <div class="input-group-text">
-          <input type="checkbox" aria-label="Checkbox for following text input">Hyper Sensitive
-        </div>
-      </div>
-      <input type="text" class="form-control" aria-label="Text input with checkbox">
-    </div>
-  </a>
-</div>
-</div>
-
-</nav>
-</div>
-</div>
-</div>
+  </div>
 
 
-<div class="container">
-<img src="images/Pets3.png">
-<img src="images/Pets1.png">
-<img src="images/Pets2.png">
-<img src="images/Pets4.png">
 
-<a href="#"><button type="button" class="btn btn-primary steps">NEXT STEPS</button></a>
-</div>
+
+  <div class="container">
+    <img src="images/Pets3.png">
+    <img src="images/Pets1.png">
+    <img src="images/Pets2.png">
+    <img src="images/Pets4.png">
+
+    <a href="#"><button type="button" class="btn btn-primary steps">NEXT STEPS</button></a>
+  </div>
 
   <!--Footer-->
   <div class="container-fluid nav-footer">
