--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <h3 class="center">FIND YOUR PERFECT PET</h3>
       <div class="row center">
         <div class="col-4">
-          <a href=""><img src="images/Dog.png"></a>
+          <a href="animals.html"><img src="images/Dog.png"></a>
         </div>
         <div class="col-4">
           <a href=""><img src="images/Cat.png"></a>
@@ -248,13 +248,13 @@
   <div class="container-fluid">
     <div class="container animals-carousel">
       <h3 class="center">AVAILABLE ANIMALS(48)</h3>
+      
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
-
         <div class="carousel-inner pets-image">
           <div class="animals">
             <div class="carousel-item active pets">
@@ -267,6 +267,7 @@
               <img src="images/Pets3.png" class="d-block" alt="...">
             </div>
           </div>
+          
         </div>
         <button class="carousel-control-prev" type="button" data-target="#carouselExampleInterval" data-slide="prev">
           <img src="images/-arrow_back_ios.png">
